add navbar to file2

--- a/file2.html
+++ b/file2.html
@@ -1,6 +1,6 @@
 <html>
     <title>
-        site page
+        <nav><a href="contact.html"></a></nav>
     </title>
     <body>
         <p>in the name of god</p>
