add a tag to contact.html

--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,6 @@
     <body>
         <h1>welcome to html page </h1> 
         <p>in the name of god</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non recusandae a, laboriosam animi ea eius ipsam maiores consequuntur unde quam, labore ad rem itaque maxime reiciendis. Iste ducimus consequatur in?</p>
     </body>
 </html>
